--- a/index.html
+++ b/index.html
@@ -129,10 +129,14 @@
         <div class="publication">
 	      <div style="margin-bottom: 10px;font-size: 18px">(<a href="https://scholar.google.com/citations?user=rIh5OqoAAAAJ&hl=en">Google Scholar</a>) (<a href="https://www.semanticscholar.org/author/Yu-Su/1758652">Semantic Scholar</a>)</div>	
 
-            <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
+            <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
             <ul>
-              
-	    </ul> -->
+                <li>
+                <span class="paperTitle">Beyond I.I.D.: Three Levels of Generalization for Question Answering on Knowledge Bases</span> <br />
+                <span class="paperAuthor">Yu Gu, Sue Kase, Michelle Vanni, Brian Sadler, Percy Liang, Xifeng Yan, Yu Su</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2011.07743">paper</a>] [<a href="https://dki-lab.github.io/GrailQA/">data and leaderboard</a>]</span>
+                </li>
+	    </ul>
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
@@ -147,7 +151,7 @@
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2005.00689">paper</a>] [<a href="https://github.com/sunlab-osu/MISP">code</a>]</span>
                 </li>
                 <li>
-                <span class="paperTitle">KGPT: Knowledge-Grounded Pre-Training for Data-to-Text Generation</span> <br />
+                <span class="paperTitle">KGLM: Pretrained Knowledge-Grounded Language Model for Data-to-Text Generation</span> <br />
                 <span class="paperAuthor">Wenhu Chen, Yu Su, Xifeng Yan and William Yang Wang. In Proc. of the Conference on Empirical Methods in Natural Language Processing, 2020 (<b>EMNLP’20</b>)</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2010.02307">paper</a>] [<a href="https://github.com/wenhuchen/KGPT">code</a>]</span>
                 </li>
