--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li>11/2020: Will co-organize the <a href="https://nlp4prog.github.io/2021/">First Workshop on Natural Language Processing for Programming</a> at ACL-IJCNLP 2021. </li>
-            <li>09/2020: Will serve on the organizing committee of NAACL 2021 as Faculty Advisor to Student Research Workshop.</li>
+            <li>09/2020: Will serve on the organizing committee of NAACL 2021.</li>
             <li>09/2020: Super excited to share some of the work I've been working on at <a href="https://www.microsoft.com/en-us/research/project/semantic-machines/">Microsoft Semantic Machines</a> &#8212; <a href="https://www.microsoft.com/en-us/research/blog/dialogue-as-dataflow-a-new-approach-to-conversational-ai/?OCID=msr_blog_semantic_tw">Task-Oriented Dialogue as Dataflow Synthesis</a> (TACL'20)</li>
             <li>09/2020: Two long papers (learning language interfaces from use and data-to-text generation) accepted to EMNLP'20. One short paper on document classification for COVID-19 literature accepted to Findings of EMNLP.</li>
             <li>05/2020: Serve as Area Chair (Conversational Bot/QA) at NLPCC'20. Serve in the Program Committee of ACL'20, KDD'20 (chair of Trustworthy Data Mining session), EMNLP'20, AAAI'21, AKBC'20, IntEx-SemPar'20.</li>
