--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="news">
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
+            <li>01/2021: Paper on <a href="https://arxiv.org/pdf/2011.07743.pdf">non-i.i.d. generalization of question answering on knowledge bases</a> accepted to TheWebConf 2021 (previously WWW). </li>
             <li>11/2020: Will co-organize the <a href="https://nlp4prog.github.io/2021/">First Workshop on Natural Language Processing for Programming</a> at ACL-IJCNLP 2021. </li>
             <li>09/2020: Will serve on the organizing committee of NAACL 2021.</li>
             <li>09/2020: Super excited to share some of the work I've been working on at <a href="https://www.microsoft.com/en-us/research/project/semantic-machines/">Microsoft Semantic Machines</a> &#8212; <a href="https://www.microsoft.com/en-us/research/blog/dialogue-as-dataflow-a-new-approach-to-conversational-ai/?OCID=msr_blog_semantic_tw">Task-Oriented Dialogue as Dataflow Synthesis</a> (TACL'20)</li>
@@ -129,17 +130,18 @@
         <div class="publication">
 	      <div style="margin-bottom: 10px;font-size: 18px">(<a href="https://scholar.google.com/citations?user=rIh5OqoAAAAJ&hl=en">Google Scholar</a>) (<a href="https://www.semanticscholar.org/author/Yu-Su/1758652">Semantic Scholar</a>)</div>	
 
-            <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
-            <ul>
-                <li>
-                <span class="paperTitle">Beyond I.I.D.: Three Levels of Generalization for Question Answering on Knowledge Bases</span> <br />
-                <span class="paperAuthor">Yu Gu, Sue Kase, Michelle Vanni, Brian Sadler, Percy Liang, Xifeng Yan, Yu Su</span>
-                <span class="paperResource"> [<a href="https://arxiv.org/abs/2011.07743">paper</a>] [<a href="https://dki-lab.github.io/GrailQA/">data and leaderboard</a>]</span>
-                </li>
-	    </ul>
+            <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p> -->
+            <!-- <ul> -->
+                
+	        <!-- </ul> -->
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
+                <li>
+                <span class="paperTitle">Beyond I.I.D.: Three Levels of Generalization for Question Answering on Knowledge Bases</span> <br />
+                <span class="paperAuthor">Yu Gu, Sue Kase, Michelle Vanni, Brian Sadler, Percy Liang, Xifeng Yan, Yu Su. To appear in the Proc. of the Web Conference (previously WWW), 2021 (<b>TheWebConf'21</b>)</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2011.07743">paper</a>] [<a href="https://dki-lab.github.io/GrailQA/">data and leaderboard</a>]</span>
+                </li>
                 <li>
                 <span class="paperTitle">Task-Oriented Dialogue as Dataflow Synthesis</span> <br />
                 <span class="paperAuthor">Semantic Machines, Jacob Andreas, John Bufe, David Burkett, Charles Chen, Josh Clausman, Jean Crawford, Kate Crim, Jordan DeLoach, Leah Dorner, Jason Eisner, Hao Fang, Alan Guo, David Hall, Kristin Hayes, Kellie Hill, Diana Ho, Wendy Iwaszuk, Smriti Jha, Dan Klein, Jayant Krishnamurthy, Theo Lanman, Percy Liang, Christopher H. Lin, Ilya Lintsbakh, Andy McGovern, Aleksandr Nisnevich, Adam Pauls, Dmitrij Petters, Brent Read, Dan Roth, Subhro Roy, Jesse Rusak, Beth Short, Div Slomin, Ben Snyder, Stephon Striplin, Yu Su, Zachary Tellman, Sam Thomson, Andrei Vorobev, Izabela Witoszko, Jason Wolfe, Abby Wray, Yuchen Zhang and Alexander Zotov. Transactions of the Association for Computational Linguistics, 2020 (<b>TACL’20</b>)</span>
@@ -147,22 +149,22 @@
                 </li>
                 <li>
                 <span class="paperTitle">An Imitation Game for Learning Semantic Parsers from User Interaction</span> <br />
-                <span class="paperAuthor">Ziyu Yao, Yiqi Tang, Wen-tau Yih, Huan Sun, and Yu Su. In Proc. of the Conference on Empirical Methods in Natural Language Processing, 2020 (<b>EMNLP’20</b>)</span>
+                <span class="paperAuthor">Ziyu Yao, Yiqi Tang, Wen-tau Yih, Huan Sun, Yu Su. In Proc. of the Conference on Empirical Methods in Natural Language Processing, 2020 (<b>EMNLP’20</b>)</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2005.00689">paper</a>] [<a href="https://github.com/sunlab-osu/MISP">code</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">KGLM: Pretrained Knowledge-Grounded Language Model for Data-to-Text Generation</span> <br />
-                <span class="paperAuthor">Wenhu Chen, Yu Su, Xifeng Yan and William Yang Wang. In Proc. of the Conference on Empirical Methods in Natural Language Processing, 2020 (<b>EMNLP’20</b>)</span>
+                <span class="paperAuthor">Wenhu Chen, Yu Su, Xifeng Yan, William Yang Wang. In Proc. of the Conference on Empirical Methods in Natural Language Processing, 2020 (<b>EMNLP’20</b>)</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2010.02307">paper</a>] [<a href="https://github.com/wenhuchen/KGPT">code</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">Document Classification for COVID-19 Literature</span> <br />
-                <span class="paperAuthor">Bernal Jiménez Gutiérrez, Juncheng Zeng, Dongdong Zhang, Ping Zhang, and Yu Su. <b>Findings of EMNLP'20</b>, short paper. Presented at <a href="https://www.nlpcovid19workshop.org/">NLP-COVID</a> workshop at <b>ACL'20</b></i></span>
+                <span class="paperAuthor">Bernal Jiménez Gutiérrez, Juncheng Zeng, Dongdong Zhang, Ping Zhang, Yu Su. <b>Findings of EMNLP'20</b>, short paper. Presented at <a href="https://www.nlpcovid19workshop.org/">NLP-COVID</a> workshop at <b>ACL'20</b></i></span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2006.13816">paper</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">Logical Natural Language Generation from Open-Domain Tables</span> <br />
-                <span class="paperAuthor">Wenhu Chen, Jianshu Chen, Yu Su, Zhiyu Chen and William Yang Wang. In Proc. of the Annual Conference of the Association for Computational Linguistics, 2020 (<b>ACL’20</b>)</span>
+                <span class="paperAuthor">Wenhu Chen, Jianshu Chen, Yu Su, Zhiyu Chen, William Yang Wang. In Proc. of the Annual Conference of the Association for Computational Linguistics, 2020 (<b>ACL’20</b>)</span>
 		<span class="paperResource"> [<a href="https://arxiv.org/abs/2004.10404">paper</a>][<a href="https://github.com/wenhuchen/LogicNLG">code and data</a>]</span>
                 </li>
                 <li>
