--- a/index.html
+++ b/index.html
@@ -138,8 +138,13 @@
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
                 <li>
+                <span class="paperTitle">Compositional Generalization for Neural Semantic Parsing via Span-level Supervised Attention</span> <br />
+                <span class="paperAuthor">Pengcheng Yin, Hao Fang, Graham Neubig, Adam Pauls, Emmanouil Antonios Platanios, Yu Su, Sam Thomson, and Jacob Andreas. To appear in the Proc. of the Annual Conference of the North American Chapter of the Association for Computational Linguistics - Human Language Technologies, 2021, short paper (<b>NAACL-HLT'21</b>)</span>
+                <span class="paperResource"> [<a href="#">paper coming soon</a>]</span>
+                </li>
+                <li>
                 <span class="paperTitle">Beyond I.I.D.: Three Levels of Generalization for Question Answering on Knowledge Bases</span> <br />
-                <span class="paperAuthor">Yu Gu, Sue Kase, Michelle Vanni, Brian Sadler, Percy Liang, Xifeng Yan, Yu Su. To appear in the Proc. of the Web Conference (previously WWW), 2021 (<b>TheWebConf'21</b>)</span>
+                <span class="paperAuthor">Yu Gu, Sue Kase, Michelle Vanni, Brian Sadler, Percy Liang, Xifeng Yan, and Yu Su. To appear in the Proc. of the Web Conference (previously WWW), 2021 (<b>TheWebConf'21</b>)</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2011.07743">paper</a>] [<a href="https://dki-lab.github.io/GrailQA/">data and leaderboard</a>]</span>
                 </li>
                 <li>
