--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
         <div class="news">
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
+            <li>03/2021: Received an Accelerator Grant from OSU TDAI on NLP for Social Media Pharmacovigilance.</li>
+            <li>03/2021: Short Paper on compositional generalization for neural semantic parsing accepted to NAACL-HLT 2021. </li>
             <li>01/2021: Paper on <a href="https://arxiv.org/pdf/2011.07743.pdf">non-i.i.d. generalization of question answering on knowledge bases</a> accepted to TheWebConf 2021 (previously WWW). </li>
             <li>11/2020: Will co-organize the <a href="https://nlp4prog.github.io/2021/">First Workshop on Natural Language Processing for Programming</a> at ACL-IJCNLP 2021. </li>
             <li>09/2020: Will serve on the organizing committee of NAACL 2021.</li>
