--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <li>
                 <span class="paperTitle">Beyond I.I.D.: Three Levels of Generalization for Question Answering on Knowledge Bases</span> <br />
                 <span class="paperAuthor">Yu Gu, Sue Kase, Michelle Vanni, Brian Sadler, Percy Liang, Xifeng Yan, and Yu Su. To appear in the Proc. of the Web Conference (previously WWW), 2021 (<b>TheWebConf'21</b>)</span>
-                <span class="paperResource"> [<a href="https://arxiv.org/abs/2011.07743">paper</a>] [<a href="https://dki-lab.github.io/GrailQA/">data and leaderboard</a>]</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2011.07743">paper</a>] [<a href="https://dki-lab.github.io/GrailQA/">data and leaderboard</a>] [<a href="https://github.com/dki-lab/GrailQA">code</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">Task-Oriented Dialogue as Dataflow Synthesis</span> <br />
