--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="news">
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
+            <li>05/2021: Long paper on large-scale joint KB and text embedding accepted to ACL 2021. </li>
             <li>03/2021: Received an Accelerator Grant from OSU TDAI on NLP for Social Media Pharmacovigilance.</li>
             <li>03/2021: Short Paper on compositional generalization for neural semantic parsing accepted to NAACL-HLT 2021. </li>
             <li>01/2021: Paper on <a href="https://arxiv.org/pdf/2011.07743.pdf">non-i.i.d. generalization of question answering on knowledge bases</a> accepted to TheWebConf 2021 (previously WWW). </li>
@@ -140,13 +141,18 @@
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
                 <li>
+                <span class="paperTitle">A Systematic Investigation of KB-Text Embedding Alignment at Scale</span> <br />
+                <span class="paperAuthor">Vardaan Pahuja, Yu Gu, Wenhu Chen, Mehdi Bahrami, Lei Liu, Wei-Peng Chen, and Yu Su. To appear in the Proc. of the Annual Conference of the Association for Computational Linguistics, 2021 (<b>ACL'21</b>)</span>
+                <span class="paperResource"> [<a href="#">paper coming soon</a>]</span>
+                </li>
+                <li>
                 <span class="paperTitle">Compositional Generalization for Neural Semantic Parsing via Span-level Supervised Attention</span> <br />
                 <span class="paperAuthor">Pengcheng Yin, Hao Fang, Graham Neubig, Adam Pauls, Emmanouil Antonios Platanios, Yu Su, Sam Thomson, and Jacob Andreas. To appear in the Proc. of the Annual Conference of the North American Chapter of the Association for Computational Linguistics - Human Language Technologies, 2021, short paper (<b>NAACL-HLT'21</b>)</span>
                 <span class="paperResource"> [<a href="#">paper coming soon</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">Beyond I.I.D.: Three Levels of Generalization for Question Answering on Knowledge Bases</span> <br />
-                <span class="paperAuthor">Yu Gu, Sue Kase, Michelle Vanni, Brian Sadler, Percy Liang, Xifeng Yan, and Yu Su. To appear in the Proc. of the Web Conference (previously WWW), 2021 (<b>TheWebConf'21</b>)</span>
+                <span class="paperAuthor">Yu Gu, Sue Kase, Michelle Vanni, Brian Sadler, Percy Liang, Xifeng Yan, and Yu Su. In the Proc. of the Web Conference (previously WWW), 2021 (<b>TheWebConf'21</b>)</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2011.07743">paper</a>] [<a href="https://dki-lab.github.io/GrailQA/">data and leaderboard</a>] [<a href="https://github.com/dki-lab/GrailQA">code</a>]</span>
                 </li>
                 <li>
