--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <li>
                 <span class="paperTitle">Compositional Generalization for Neural Semantic Parsing via Span-level Supervised Attention</span> <br />
                 <span class="paperAuthor">Pengcheng Yin, Hao Fang, Graham Neubig, Adam Pauls, Emmanouil Antonios Platanios, Yu Su, Sam Thomson, and Jacob Andreas. To appear in the Proc. of the Annual Conference of the North American Chapter of the Association for Computational Linguistics - Human Language Technologies, 2021, short paper (<b>NAACL-HLT'21</b>)</span>
-                <span class="paperResource"> [<a href="#">paper coming soon</a>]</span>
+                <span class="paperResource"> [<a href="https://www.aclweb.org/anthology/2021.naacl-main.225.pdf">paper</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">Beyond I.I.D.: Three Levels of Generalization for Question Answering on Knowledge Bases</span> <br />
