--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <li>
                 <span class="paperTitle">A Systematic Investigation of KB-Text Embedding Alignment at Scale</span> <br />
                 <span class="paperAuthor">Vardaan Pahuja, Yu Gu, Wenhu Chen, Mehdi Bahrami, Lei Liu, Wei-Peng Chen, and Yu Su. To appear in the Proc. of the Annual Conference of the Association for Computational Linguistics, 2021 (<b>ACL'21</b>)</span>
-                <span class="paperResource"> [<a href="#">paper coming soon</a>]</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2106.01586">paper</a>] [<a href="https://github.com/dki-lab/joint-kb-text-embedding">code</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">Compositional Generalization for Neural Semantic Parsing via Span-level Supervised Attention</span> <br />
