--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li>07/2021: Excited to be a part of <a href="https://icicle.osu.edu/">ICICLE</a> -- a new NSF AI Institute dedicated to democratizing AI through AI and cyberinfrastructure innovations. I will lead the <a href="https://icicle.osu.edu/who-we-are/management"></href>AI team</a> with Eric Fosler-Lussier. <a href="https://news.osu.edu/nsf-funds-2-ohio-state-based-institutes-to-expand-artificial-intelligence-research/">Read more</a>.</li>
+            <li>07/2021: Talk at USC/ISI and Beijing Academy of Artificial Intelligence on Emerging Frontiers of Conversational AI.</li>
             <li>05/2021: Long paper on large-scale joint KB and text embedding accepted to ACL 2021. </li>
             <li>03/2021: Received an Accelerator Grant from OSU TDAI on NLP for Social Media Pharmacovigilance.</li>
             <li>03/2021: Short Paper on compositional generalization for neural semantic parsing accepted to NAACL-HLT 2021. </li>
