--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="news">
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
+            <li>08/2021: Paper on pre-trained language models with better reasoning capabilities accepted to EMNLP 2021.</li>
             <li>07/2021: Excited to be a part of <a href="https://icicle.osu.edu/">ICICLE</a> -- a new NSF AI Institute dedicated to democratizing AI through AI and cyberinfrastructure innovations. I will lead the <a href="https://icicle.osu.edu/who-we-are/management"></href>AI team</a> with Eric Fosler-Lussier. <a href="https://news.osu.edu/nsf-funds-2-ohio-state-based-institutes-to-expand-artificial-intelligence-research/">Read more</a>.</li>
             <li>07/2021: Talk at USC/ISI and Beijing Academy of Artificial Intelligence on Emerging Frontiers of Conversational AI.</li>
             <li>05/2021: Long paper on large-scale joint KB and text embedding accepted to ACL 2021. </li>
@@ -143,13 +144,18 @@
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
                 <li>
+                    <span class="paperTitle">ReasonBERT: Pre-trained to Reason with Distant Supervision</span> <br />
+                    <span class="paperAuthor">Xiang Deng, Yu Su, Alyssa Lees, You Wu, Cong Yu and Huan Sun. To appear in the Conference on Empirical Methods in Natural Language Processing, 2021 (<b>EMNLP'21</b>)</span>
+                    <span class="paperResource"> [<a href="#">paper coming soon</a>] </span>
+                    </li>
+                <li>
                 <span class="paperTitle">A Systematic Investigation of KB-Text Embedding Alignment at Scale</span> <br />
-                <span class="paperAuthor">Vardaan Pahuja, Yu Gu, Wenhu Chen, Mehdi Bahrami, Lei Liu, Wei-Peng Chen, and Yu Su. To appear in the Proc. of the Annual Conference of the Association for Computational Linguistics, 2021 (<b>ACL'21</b>)</span>
+                <span class="paperAuthor">Vardaan Pahuja, Yu Gu, Wenhu Chen, Mehdi Bahrami, Lei Liu, Wei-Peng Chen, and Yu Su. In the Proc. of the Annual Conference of the Association for Computational Linguistics, 2021 (<b>ACL'21</b>)</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2106.01586">paper</a>] [<a href="https://github.com/dki-lab/joint-kb-text-embedding">code</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">Compositional Generalization for Neural Semantic Parsing via Span-level Supervised Attention</span> <br />
-                <span class="paperAuthor">Pengcheng Yin, Hao Fang, Graham Neubig, Adam Pauls, Emmanouil Antonios Platanios, Yu Su, Sam Thomson, and Jacob Andreas. To appear in the Proc. of the Annual Conference of the North American Chapter of the Association for Computational Linguistics - Human Language Technologies, 2021, short paper (<b>NAACL-HLT'21</b>)</span>
+                <span class="paperAuthor">Pengcheng Yin, Hao Fang, Graham Neubig, Adam Pauls, Emmanouil Antonios Platanios, Yu Su, Sam Thomson, and Jacob Andreas. In the Proc. of the Annual Conference of the North American Chapter of the Association for Computational Linguistics - Human Language Technologies, 2021, short paper (<b>NAACL-HLT'21</b>)</span>
                 <span class="paperResource"> [<a href="https://www.aclweb.org/anthology/2021.naacl-main.225.pdf">paper</a>]</span>
                 </li>
                 <li>
