--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         <h2>Teaching</h2>
         <div class="divider"></div>
         <ul>
+            <li>AU2021: CSE6521 - Introduction to Artificial Intelligence</a> (Graduate) </li>
             <li>AU2020: <a href="courses/au20/cse5539/">CSE5539 - Cutting-Edge Topics in Natural Language Processing</a> (Undergrad & Graduate)</li>
             <li>SP2020: <a href="courses/sp20/cse5243/">CSE5243 - Introduction to Data Mining</a> (Undergrad & Graduate)</li>
         </ul>
