--- a/index.html
+++ b/index.html
@@ -145,10 +145,15 @@
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
                 <li>
-                    <span class="paperTitle">ReasonBERT: Pre-trained to Reason with Distant Supervision</span> <br />
-                    <span class="paperAuthor">Xiang Deng, Yu Su, Alyssa Lees, You Wu, Cong Yu and Huan Sun. To appear in the Conference on Empirical Methods in Natural Language Processing, 2021 (<b>EMNLP'21</b>)</span>
-                    <span class="paperResource"> [<a href="#">paper coming soon</a>] </span>
-                    </li>
+                <span class="paperTitle">An Investigation of Language Model Interpretability via Sentence Editing</span> <br />
+                <span class="paperAuthor">Samuel Stevens and Yu Su. To appear in the BlackboxNLP Workshop at EMNLP, 2021 (<b>BlackboxNLP'21</b>)</span>
+                <span class="paperResource"> [<a href="#">paper coming soon</a>] </span>
+                </li>
+                <li>
+                <span class="paperTitle">ReasonBERT: Pre-trained to Reason with Distant Supervision</span> <br />
+                <span class="paperAuthor">Xiang Deng, Yu Su, Alyssa Lees, You Wu, Cong Yu and Huan Sun. To appear in the Conference on Empirical Methods in Natural Language Processing, 2021 (<b>EMNLP'21</b>)</span>
+                <span class="paperResource"> [<a href="#">paper coming soon</a>] </span>
+                </li>
                 <li>
                 <span class="paperTitle">A Systematic Investigation of KB-Text Embedding Alignment at Scale</span> <br />
                 <span class="paperAuthor">Vardaan Pahuja, Yu Gu, Wenhu Chen, Mehdi Bahrami, Lei Liu, Wei-Peng Chen, and Yu Su. In the Proc. of the Annual Conference of the Association for Computational Linguistics, 2021 (<b>ACL'21</b>)</span>
