--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <li>
                 <span class="paperTitle">ReasonBERT: Pre-trained to Reason with Distant Supervision</span> <br />
                 <span class="paperAuthor">Xiang Deng, Yu Su, Alyssa Lees, You Wu, Cong Yu and Huan Sun. To appear in the Conference on Empirical Methods in Natural Language Processing, 2021 (<b>EMNLP'21</b>)</span>
-                <span class="paperResource"> [<a href="#">paper coming soon</a>] </span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2109.04912">paper</a>] [<a href="https://github.com/sunlab-osu/ReasonBERT">code and pre-trained models</a>] </span>
                 </li>
                 <li>
                 <span class="paperTitle">A Systematic Investigation of KB-Text Embedding Alignment at Scale</span> <br />
