--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <li>
                 <span class="paperTitle">An Investigation of Language Model Interpretability via Sentence Editing</span> <br />
                 <span class="paperAuthor">Samuel Stevens and Yu Su. To appear in the BlackboxNLP Workshop at EMNLP, 2021 (<b>BlackboxNLP'21</b>)</span>
-                <span class="paperResource"> [<a href="#">paper coming soon</a>] </span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2011.14039">paper</a>] </span>
                 </li>
                 <li>
                 <span class="paperTitle">ReasonBERT: Pre-trained to Reason with Distant Supervision</span> <br />
