--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <div class="divider"></div>
 
         <img src="images/avatar.jpg" alt="Yu Su" style="width:264px;height:246px;float:left;margin-right:10px;margin-bottom:10px;margin-top:5px;">
-        <p>I'm currently an Assistant Professor of the <a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a> at the Ohio State University and a Senior Researcher at <a href="http://www.semanticmachines.com/">Microsoft Semantic Machines</a>. I got my PhD from University of California, Santa Barbara and my bachelor degree from Tsinghua University, both in Computer Science. I have spent some fun time interning in IBM T.J. Watson Research Center, Microsoft Research Redmond, and U.S. Army Research Laboratory.
+        <p>I'm an Assistant Professor of the <a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a> at the Ohio State University. I got my PhD from University of California, Santa Barbara and my bachelor degree from Tsinghua University, both in Computer Science and with distinction. Prior to joining OSU, I spent some fun time as researcher at Microsoft Semantic Machines.
         </p>
         <p>
         I have broad interests in understanding <b>human languages</b>, <b>formal knowledge</b>, and <b>their interplay</b>. Specifically, I have been working on natural language interfaces (an umbrella term for techniques like semantic parsing and dialog systems) for a wide range of backend data and services such as knowledge bases, web tables, and APIs. I'm also interested in knowledge base construction and general text mining. 
         </p>
 	
 	<div>
-	<b>I'm looking for highly-motivated students. Drop me an email if you are interested in natural language processing, machine learning, and data mining (unfortunately due to the high volumn I may not be able to reply to every email).</b>
+	<b>Thanks to generous support from NSF (<a href="https://icicle.osu.edu/">ICICLE Institute</a>, <a href="https://imageomics.osu.edu/">Imageomics Institute</a>, <a href="https://www.nsf.gov/news/special_reports/announcements/092221.jsp">Convergence Accelerator</a>), my group has multiple openings for students (PhD/Master/Undergraduate) and post-docs. Drop me an email with CV and transcripts if you are interested in natural language processing, machine learning, and data mining (unfortunately due to the high volumn I may not be able to reply to every email).</b>
 	</div>
     </div>
 	    
