--- a/index.html
+++ b/index.html
@@ -374,11 +374,13 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
           <div class="divider"></div>
           <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Current Ph.D. Students</b></p> -->
           <ul>
-              <li><a href="https://entslscheia.github.io/">Yu Gu</a></li>
-              <li><a href="https://vardaan123.github.io/">Vardaan Pahuja</a></li>
-              <li><a href="https://dblp.org/pid/264/4620.html">Bernal Jiménez Gutiérrez</a></li>
-              <li><a href="https://scholar.google.com/citations?user=6uzf-3kAAAAJ&hl=en">Piyush Chawla</a> (Co-advised with Han-Wei Shen)</li>
-              <li><a href="https://chanh.ee/">Chan Hee Song</a></li>
+              <li><a href="https://entslscheia.github.io/">Yu Gu</a> (2020-)</li>
+              <li><a href="https://vardaan123.github.io/">Vardaan Pahuja</a> (2020-)</li>
+              <li><a href="https://dblp.org/pid/264/4620.html">Bernal Jiménez Gutiérrez</a> (2020-)</li>
+              <li><a href="https://scholar.google.com/citations?user=6uzf-3kAAAAJ&hl=en">Piyush Chawla</a> (2020-, Co-advised with Han-Wei Shen)</li>
+              <li><a href="https://chanh.ee/">Chan Hee Song</a> (2020-)</li>
+              <li><a href="https://scholar.google.com/citations?user=KXSlX3sAAAAJ&hl=en">Shijie Chen</a> (2021-)</li>
+              <li><a href="https://samuelstevens.me/">Samuel Stevens</a> (2021-)</li>
           </ul>
       </div>
 
