--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <div class="divider"></div>
 
         <img src="images/avatar.jpg" alt="Yu Su" style="width:264px;height:246px;float:left;margin-right:10px;margin-bottom:10px;margin-top:5px;">
-        <p>I'm an Assistant Professor of the <a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a> at the Ohio State University. I got my PhD from University of California, Santa Barbara and my bachelor degree from Tsinghua University, both in Computer Science and with distinction. I also spend some fun time at <a href="https://www.microsoft.com/en-us/research/project/semantic-machines/">Microsoft Semantic Machines</a>.
+        <p>I'm an Assistant Professor of the <a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a> at the Ohio State University. I got my PhD from <a href="https://cs.ucsb.edu/">University of California, Santa Barbara</a> and my bachelor degree from <a href="https://www.cs.tsinghua.edu.cn/csen/">Tsinghua University</a>, both in Computer Science. I also spend some fun time at <a href="https://www.microsoft.com/en-us/research/project/semantic-machines/">Microsoft Semantic Machines</a>.
         </p>
         <p>
-        I have broad interests in understanding <b>human languages</b>, <b>formal knowledge</b>, and <b>their interplay</b>. Specifically, I have been working on natural language interfaces (an umbrella term for techniques like semantic parsing and dialog systems) for a wide range of backend data and services such as knowledge bases, web tables, and APIs. I'm also interested in knowledge base construction and general text mining. 
+        I have broad interests in understanding human languages, formal knowledge and languages, and their interplay, with the overarching goal of enabling humans and machines to communicate and collaborate via natural language. More specifically, I'm interested in conversational AI (dialogue systems, semantic parsing, question answering, and grounded language understanding) and knowledge representation (knowledge base construction, reasoning, and querying). I'm also fascinated by a series of general AI problems such as interpretability, robustness and out-of-distribution generalization, multimodality, and sample-efficient learning. Finally, I believe in translational research and seek to leverage AI capabilities to empower a variety of domains such as biomedicine and biology.  
         </p>
 	
 	<div>
